[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.11.2"

[[bin]]
name = "day_1"
[[bin]]
name = "day_2"
[[bin]]
name = "day_3"
[[bin]]
name = "day_4"
[[bin]]
name = "day_5"
[[bin]]
name = "day_6"
[[bin]]
name = "day_7"
[[bin]]
name = "day_8"

[profile.release]
debug = true
